--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "faunadb": "^4.3.0",
+    "faunadb": "4.1.1",
     "next": "10.2.0",
     "next-auth": "^3.29.0",
     "react": "17.0.2",
