--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.18.0",
     "axios": "^0.21.4",
     "faunadb": "4.1.1",
     "next": "10.2.0",
